[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Background/space.png" type="Texture" id=1]
[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Logo/logo.png" type="Texture" id=3]
[ext_resource path="res://fonts/PixelGameFont.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/transicao.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="CenterContainer"]
position = Vector2( 640, 224 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 1124 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1824, 416 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 544.0
margin_top = 443.0
margin_right = 724.0
margin_bottom = 568.0
custom_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 17.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Button3")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Button2")
focus_next = NodePath("../Button2")
focus_previous = NodePath("../Button3")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "CONTINUE"
flat = true

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 180.0
margin_bottom = 59.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Button")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Button3")
focus_next = NodePath("../Button3")
focus_previous = NodePath("../Button")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "NEW GAME"
flat = true

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 180.0
margin_bottom = 101.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Button2")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Button")
focus_next = NodePath("../Button")
focus_previous = NodePath("../Button2")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "QUIT"
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 544.0
margin_top = 672.0
margin_right = 1004.0
margin_bottom = 752.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="Button3" type="Button" parent="VBoxContainer2"]
margin_right = 460.0
margin_bottom = 20.0
text = "©BEG co.ltd 2023"
flat = true

[node name="Button4" type="Button" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 460.0
margin_bottom = 44.0
text = "©BEG All Rights Reserved"
flat = true

[node name="transition" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="mouse_entered" from="VBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button2" to="." method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button3" to="." method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button3" to="." method="_on_Button3_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
